--- a/main.html
+++ b/main.html
@@ -33,10 +33,10 @@
         <td width="20%" rowspan="2" style="background-color:#D3BDC9">
           <div style="margin-left:30px">
             <ul>
-              <li><a href="../pages/main.html">Главная</a></li>
-              <li><a href="../pages/first.html">Первая</a></li>
-              <li><a href="../pages/second.html">Вторая</a></li>
-              <li><a href="../pages/third.html">Третья</a></li>
+              <li><a href="main.html">Главная</a></li>
+              <li><a href="first.html">Первая</a></li>
+              <li><a href="second.html">Вторая</a></li>
+              <li><a href="third.html">Третья</a></li>
             </ul>
           </div>
         </td>
