--- a/first.html
+++ b/first.html
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <td width="60%" height="300px" style="position: relative;padding: 0">
-          <img src="../src/eye.jpg" height="300" width="300">
+          <img src="eye.jpg" height="300" width="300">
           <div style="padding-left: 20px; right: 0; left: 0; height: 70px; bottom: 0;position: absolute; background:green" >
             Глаз
           </div>
