--- a/third.html
+++ b/third.html
@@ -21,10 +21,10 @@
           <td width="20%" rowspan="2" style="background-color:#D3BDC9">
             <div style="margin-left:30px">
               <ul>
-                <li><a href="../pages/main.html">Главная</a></li>
-                <li><a href="../pages/first.html">Первая</a></li>
-                <li><a href="../pages/second.html">Вторая</a></li>
-                <li><a href="../pages/third.html">Третья</a></li>
+                <li><a href="main.html">Главная</a></li>
+                <li><a href="first.html">Первая</a></li>
+                <li><a href="second.html">Вторая</a></li>
+                <li><a href="third.html">Третья</a></li>
               </ul>
             </div>
           </td>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <td width="60%" height="300px" style="position: relative;padding: 0">
-            <img src = "../src/parot.jpg" usemap = "#figures" alt = "Choose one" >
+            <img src = "parot.jpg" usemap = "#figures" alt = "Choose one" >
             <map name = "figures" >
               <area shape = "poly" coords = "33,41,169,221,360,53" href = "https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D1%88%D1%83%D0%B5%D0%BA%D1%80%D1%8B%D0%BB%D1%8B%D0%B5" alt = "butterfly" >
               <area shape = "poly" coords = "380,50,380,369,590,360,572,45" href = "https://ru.wikipedia.org/wiki/%D0%9B%D0%B5%D0%BC%D1%83%D1%80%D0%BE%D0%BE%D0%B1%D1%80%D0%B0%D0%B7%D0%BD%D1%8B%D0%B5" alt = "coala" >
